# msaf

./: CMakeLists.txt  README.md
docs/: design.md
msaf/: CMakeLists.txt
msaf/include/framework/: ModularAnalysis.h
msaf/lib/framework/: ModularAnalysis.cpp
msaf/tools/: CMakeLists.txt
msaf/tools/test/: CMakeLists.txt  test.cpp
msaf/tools/test_driver/: CMakeLists.txt  test.cpp
testcases/paper/: test.c  test.ll  test_topo.c  test_topo.ll
